// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Asset methods should correctly reject many 1`] = `
Object {
  "error": [Error: 1,2,3],
  "meta": Object {
    "params": Array [
      1,
      2,
      3,
    ],
    "request": "assets",
  },
  "type": "DBError",
}
`;

exports[`Asset methods should correctly reject one 1`] = `
Object {
  "error": [Error: 1],
  "meta": Object {
    "params": Array [
      1,
    ],
    "request": "assets",
  },
  "type": "DBError",
}
`;

exports[`Asset methods should correctly resolve many 1`] = `
Array [
  Object {
    "@@tag": "Just",
    "@@type": "folktale:Maybe",
    "@@value": Object {
      "value": 1,
    },
  },
  Object {
    "@@tag": "Just",
    "@@type": "folktale:Maybe",
    "@@value": Object {
      "value": 2,
    },
  },
  Object {
    "@@tag": "Just",
    "@@type": "folktale:Maybe",
    "@@value": Object {
      "value": 3,
    },
  },
]
`;

exports[`Asset methods should correctly resolve one 1`] = `
Object {
  "@@tag": "Just",
  "@@type": "folktale:Maybe",
  "@@value": Object {
    "value": 1,
  },
}
`;
